2017-12-06  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht), 
	* tex4ht-4ht.tex (animate.4ht, usepackage.4ht): added support for the
	animate package.

2017-11-23  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (nameref.4ht): add label for equation if asmath is not
	used.

2017-11-16  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (biblatex.4ht): fixed version checking

2017-11-12  Karl Berry  <karl@freefriends.org>

	* Makefile (update-env): separate out target.
	(update: call it.

	* tex4ht-docbook.tex: copyright.

2017-11-11  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-docbook.tex (docbook.4ht): added support for the quote
	environment.

2017-11-10  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-env.tex (tex4ht.env): use the --exact option for dvisvgm, it
	prevents wrong image clipping in some cases.

2017-10-25  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): define dummy vallue for
	\Gin@page when it is undefined.

2017-10-22  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): added configurations for
	frenchb spaces.
	* tex4ht-ooffice.tex (ooffice-mml.4ht): Changed definition of
	\:nbsp macro to produce actual non-breaking space.
	http://tug.org/pipermail/tex4ht/2017q4/001852.html

2017-10-21  Karl Berry  <karl@freefriends.org>

	* tex4ht-fonts-noncjk.tex
     (ctib -> tex4ht.dir/texmf/tex4ht/ht-fonts/iso8859/1/tibetan/ctib.htf,
  ctib-uni -> tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/tibetan/ctib.htf):
        correct |jobname to `jobname for this context.

	* tex4ht-fonts-noncjk.tex
     (lacc-uni -> tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lh/lh-t2a/lacc.htf),
	* tex4ht-4ht.tex (graphicx.4ht): copyright.

2017-10-18  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (graphicx.4ht): add xbb support for pdf and svg.
	* tex4ht-html4.tex (html4.4ht): use pdf2svg for pdf to svg
	conversion, the pdf images will be converted to png by default,