@@ -330,4 +330,5 @@
 \AddFile{9}{mdframed}
 \AddFile{9}{skak}
 \AddFile{9}{animate}
+\AddFile{9}{sectionbreak}
 % \AddFile{9}{mktex4ht}
